[workspace]
package.edition = "2024"
members = ["client", "server", "common", "protocol"]

[workspace.dependencies]
bevy = { version = "0.17.2", features = ["serialize"] }
avian3d = { version = "0.4.0", features = ["simd", "parallel"] }
lightyear = { version = "0.25.3", features = ["udp", "netcode"] }

rayon = "1.11.0"
clap = { version = "4.5.50", features = ["derive", "cargo"] }
directories = "6.0.0"
rand = "0.9.2"
log = { version = "0.4.28", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"

thiserror = { version = "2.0.17" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
incremental = false
debug = false
